service gestion de ordenes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <app-first-page></app-first-page>
-  
+  <app-delivery-order></app-delivery-order>
+  <hr>
+  <app-delivery-list></app-delivery-list>
 </body>
 </html>
